@@ -4,13 +4,13 @@
 ##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
 ##FORMAT=<ID=Zygosity,Number=1,Type=String,Description="Zygosity">
 #CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	basen0	basen1	basen2	basen3	basen4	basen5	basen6	basen7	basen8	basen9
-target1	126	.				BIOMART_COORDS=target1:126:126	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	127	.				BIOMART_COORDS=target1:127:127	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	128	.				BIOMART_COORDS=target1:128:128	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	129	.				BIOMART_COORDS=target1:129:129	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	130	.				BIOMART_COORDS=target1:130:130	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	131	.				BIOMART_COORDS=target1:131:131	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	132	.				BIOMART_COORDS=target1:132:132	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	133	.				BIOMART_COORDS=target1:133:133	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	134	.				BIOMART_COORDS=target1:134:134	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
-target1	135	.				BIOMART_COORDS=target1:135:135	GT:Zygosity	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	A/G:heterozygous	
+target1	126	.	A	G		BIOMART_COORDS=target1:126:126	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	127	.	A	G		BIOMART_COORDS=target1:127:127	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	128	.	A	G		BIOMART_COORDS=target1:128:128	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	129	.	A	G		BIOMART_COORDS=target1:129:129	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	130	.	A	G		BIOMART_COORDS=target1:130:130	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	131	.	A	G		BIOMART_COORDS=target1:131:131	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	132	.	A	G		BIOMART_COORDS=target1:132:132	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	133	.	A	G		BIOMART_COORDS=target1:133:133	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	134	.	A	G		BIOMART_COORDS=target1:134:134	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
+target1	135	.	A	G		BIOMART_COORDS=target1:135:135	GT:Zygosity	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	0/1:heterozygous	
