@@ -1,0 +1,6 @@
+##fileformat=VCFv4.1
+##Goby=UNKNOWN
+##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
+#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	sample-id-1	sample-id-2
+			CC	A,N,T			GT	0/3	1/3	
+			A	C,T			GT	0/0	0/1	
